refactor: 궁성 대각선 연결 구현 변경